# etl-jsonplaceholder

./: .gitignore  README.md  pyproject.toml
src/etl/: __main__.py  config.py  db.py  fetcher.py
tests/: test_etl.py
